        * add the set_extension_args method to ClaimedIdentity and the
          extension_fields and signed_extension_fields methods to
          VerifiedIdentity, which together form a higher-level API
          for using protocol extensions such as SREG and PAPE.

	* add support for OpenID 2.0-style messages from providers

	* use our own simplified fork of Net::Yadis::Discovery to avoid
	  dependency on Module::Pluggable::Fast. Or on Net::Yadis::Discovery,
	  for that matter.

	* add hooks for openid-test project. (bradfitz)

	* add OpenID 2.0-compliant discovery and authentication request.

	* add method on claimed identity object to get delgated URL

0.14: (2007-08-03)

	* allow CGI subclasses (like CGI::Fast) for args.  bug fix
	  from Chris Kastorff <encryptio@gmail.com>.

0.13:
	* work-around bug in some openid servers that don't escape "+".
	  so treat a space as a +.  (from Thomas Sibley
	  <trs@bestpractical.com>)

        * go into dumb mode earlier if it's detected that our cache object
	  isn't working

	* give callers access to the signed_fields from the verified
	  identity object

0.12:
	* required_root in constructor/method/validated_identity

	* allow https identities

	* version 1.1 of the protocol

	* expand entities in link rel

	* reject cached association validation if expiry is in past

0.11:
	* document common error codes from claimed_identity, and
	  cleanup some error handling/codes

	* support openid.mode=cancel

	* respect replace_after and expiry.  do clock compensation
	  between local clock and server.

	* invalidate_handle support

0.10:
        * handle openid.delegate properly (was losing state because I'd
	  put a URL parameter onto the wrong URL)

	* copy all signed parameters into POST args in dumb mode,
	  not a static set (to be future-proof)

0.09:
        * switch to DH/HMAC protocol, not DSA protocol

0.08:
	* more openssl-binary temp file changes.  on second failure (which